--- a/RxSwiftTest/RxSwiftTest/Base.lproj/Main.storyboard
+++ b/RxSwiftTest/RxSwiftTest/Base.lproj/Main.storyboard
@@ -11,10 +11,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--CitySearcher-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RxSwiftTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="CitySearcher" id="BYZ-38-t0r" customClass="ViewController" customModule="RxSwiftTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -69,7 +69,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="ElQ-Zc-G4b"/>
+                    <tabBarItem key="tabBarItem" title="City Searcher" id="ElQ-Zc-G4b"/>
                     <connections>
                         <outlet property="searchBar" destination="N6M-cq-4Mc" id="Uka-Sz-MY1"/>
                         <outlet property="tableView" destination="qfT-xk-Ng4" id="C0y-Ab-Xmx"/>
@@ -79,7 +79,7 @@
             </objects>
             <point key="canvasLocation" x="-674" y="884"/>
         </scene>
-        <!--Item-->
+        <!--Progress-->
         <scene sceneID="TsF-jk-j60">
             <objects>
                 <viewController id="EKr-tv-cIb" customClass="SubjectInPracticeViewController" customModule="RxSwiftTest" customModuleProvider="target" sceneMemberID="viewController">
@@ -114,7 +114,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FBN-9L-Hb0"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="2cl-NE-KVp"/>
+                    <tabBarItem key="tabBarItem" title="Progress" id="2cl-NE-KVp"/>
                     <connections>
                         <outlet property="openButton" destination="kEh-Jl-tsw" id="XZc-wE-ksh"/>
                         <outlet property="progressLabel" destination="1ek-08-RpV" id="HFi-ih-WKo"/>
@@ -125,18 +125,64 @@
             </objects>
             <point key="canvasLocation" x="28" y="883.80809595202402"/>
         </scene>
+        <!--Image Loader-->
+        <scene sceneID="X9Q-UV-2Q7">
+            <objects>
+                <viewController id="6AP-Ff-6Tg" customClass="ImageLoaderViewController" customModule="RxSwiftTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yck-AF-phl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vZi-H3-Vl0">
+                                <rect key="frame" x="0.0" y="20" width="375" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="Efr-02-5zE"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lSo-WD-vJd">
+                                <rect key="frame" x="132" y="470" width="112" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Unp-Q1-RCe"/>
+                                </constraints>
+                                <state key="normal" title="Image Load"/>
+                                <connections>
+                                    <action selector="imageLoadButton:" destination="6AP-Ff-6Tg" eventType="touchUpInside" id="L8M-zu-zBE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lSo-WD-vJd" firstAttribute="centerX" secondItem="vZi-H3-Vl0" secondAttribute="centerX" id="86Y-LF-kMm"/>
+                            <constraint firstItem="vZi-H3-Vl0" firstAttribute="leading" secondItem="J8J-95-vqV" secondAttribute="leading" id="B6W-Wi-6MD"/>
+                            <constraint firstItem="vZi-H3-Vl0" firstAttribute="top" secondItem="J8J-95-vqV" secondAttribute="top" id="KRY-kD-wi3"/>
+                            <constraint firstItem="lSo-WD-vJd" firstAttribute="top" secondItem="vZi-H3-Vl0" secondAttribute="bottom" constant="50" id="js4-xr-Mv8"/>
+                            <constraint firstItem="J8J-95-vqV" firstAttribute="trailing" secondItem="vZi-H3-Vl0" secondAttribute="trailing" id="uLy-zo-gvL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="J8J-95-vqV"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Image Loader" id="dC1-1F-TAf"/>
+                    <connections>
+                        <outlet property="imageView" destination="vZi-H3-Vl0" id="gFc-zx-NgZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rR2-Cs-3uP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="741.60000000000002" y="883.80809595202402"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="a7w-BS-0de">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="yK9-wj-rJq" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bNs-jS-bzQ">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="9wq-mf-JuE"/>
                         <segue destination="EKr-tv-cIb" kind="relationship" relationship="viewControllers" id="bFY-AP-Hk6"/>
+                        <segue destination="6AP-Ff-6Tg" kind="relationship" relationship="viewControllers" id="fTW-cO-00S"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R18-7t-n4i" userLabel="First Responder" sceneMemberID="firstResponder"/>
