--- a/RxSwiftTest/RxSwiftTest/Base.lproj/Main.storyboard
+++ b/RxSwiftTest/RxSwiftTest/Base.lproj/Main.storyboard
@@ -260,6 +260,7 @@
                         <segue destination="L8T-Ix-srd" kind="relationship" relationship="viewControllers" id="igC-5O-BFz"/>
                         <segue destination="MKI-qN-G7R" kind="relationship" relationship="viewControllers" id="ufF-43-t87"/>
                         <segue destination="nLT-Ep-34s" kind="relationship" relationship="viewControllers" id="Dgq-lH-h6F"/>
+                        <segue destination="OmL-ab-Rz2" kind="relationship" relationship="viewControllers" id="W1M-zN-jUw"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R18-7t-n4i" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -424,6 +425,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sgt-fg-Hjz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="874" y="113"/>
+        </scene>
+        <!--RxTableView-->
+        <scene sceneID="kLd-Wp-QN9">
+            <objects>
+                <viewController id="OmL-ab-Rz2" customClass="RxTableViewTestController" customModule="RxSwiftTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1V7-oZ-MW4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0Ih-HB-WFF">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="1hy-Cn-vMr">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1hy-Cn-vMr" id="6OK-8P-bw5">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="doX-HY-rsr" firstAttribute="bottom" secondItem="0Ih-HB-WFF" secondAttribute="bottom" id="4fC-al-H4F"/>
+                            <constraint firstItem="0Ih-HB-WFF" firstAttribute="top" secondItem="doX-HY-rsr" secondAttribute="top" id="BzG-K1-wBQ"/>
+                            <constraint firstItem="doX-HY-rsr" firstAttribute="trailing" secondItem="0Ih-HB-WFF" secondAttribute="trailing" id="Zgd-i8-6Oe"/>
+                            <constraint firstItem="0Ih-HB-WFF" firstAttribute="leading" secondItem="doX-HY-rsr" secondAttribute="leading" id="dse-vA-leS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="doX-HY-rsr"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="RxTableView" id="QyB-qn-BoN"/>
+                    <connections>
+                        <outlet property="tableView" destination="0Ih-HB-WFF" id="JOE-7w-HuL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vap-97-3Jp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-927" y="-621"/>
         </scene>
         <!--Weather-->
         <scene sceneID="yBz-Oa-D3C">
